<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bolsa</string>

    <string name="password">Ingrese su contraseña</string>
    <string name="btlogin">Iniciar sesión</string>
    <string name="btllenarBaseDeDatos">Llenar base de datos</string>
    <string name="btFacebook">Login Facebook</string>
    <string name="ingrese_usuario">Ingrese su usuario</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BIENVENIDO</string>
    <string name="nav_header_subtitle">Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Datos de mi perfil</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="filtrar">Filtrar:</string>
    <string name="buscar">BUSCAR</string>
    <string name="buscar_empleo">Buscar empleo</string>
    <string name="datos_de_mi_perfil">Datos de mi perfil</string>


    <array name="tipo_empleos">
        <item>Programación</item>

    </array>
    <string-array name="departamentos_array">
        <item>Ahuachanpan</item>
        <item>Cabañas</item>
        <item>Chalatenango</item>
        <item>Cuscatlan</item>
        <item>La Libertad</item>
        <item>Morazan</item>
        <item>San Salvador</item>
        <item>La Paz</item>
        <item>Santa Ana</item>
        <item>San Miguel</item>
        <item>Sonsonate</item>
        <item>San Vicente</item>
        <item>La Union</item>
        <item>Usulutan</item>
    </string-array>
    <string-array name="municipios_array">
        <item>Tonacatepeque</item>
        <item>Soyapango</item>
        <item>Apopa</item>
        <item>Ciudad Barrios</item>
    </string-array>

    <!--Strings de empresa y oferta-->
    <string name="imagen_perfil_empresa">Perfil</string>
    <string name="imagen_ofertas">Ofertas</string>
    <string name="btnInsertarOferta">Insertar oferta</string>
    <string name="btnEditarOferta">Editar oferta</string>
    <string name="btnConsultarOferta">Consultar oferta</string>
    <string name="btnEliminarOferta">Eliminar oferta</string>
    <string name="idEmpresa">idEmpresa</string>
    <string name="inicioOferta">Inicio Oferta</string>
    <string name="finOferta">Fin Oferta</string>
    <string name="nombreOferta">Nombre Oferta</string>
    <string name="title_activity_oferta_laboral_insertar">OfertaInsertarActivity</string>
    <string name="title_activity_oferta_laboral_alumno_eliminar">OfertaEliminarActivity</string>
    <string name="title_activity_oferta_laboral_alumno_actualizar">OfertaActualizarActivity</string>
    <string name="title_activity_oferta_laboral_alumno_consultar">OfertaConsultarActivity</string>
    <string name="idOferta">Id Oferta</string>
    <!---->

    <!--Strings aspirante-->
    <string name="idAspirante">idAspirante</string>
    <string name="estado">Estado</string>
    <string name="idDetalleOferta">id Detalle</string>
    <string name="perfil">perfil</string>
    <string name="salario">Salario</string>
    <string-array name="estado">
        <item>Aprobado</item>
        <item>Rechazado</item>
    </string-array>
    <!---->

    <!--Strings de detalle_experiencia -->
    <string name="detalle_experiencia_idcandidato">Candidato</string>
    <string name="detalle_experiencia_lugar_experiencia">Lugar en que obtuvo experiencia</string>
    <string name="detalle_experiencia_puesto">Puesto</string>
    <string name="detalle_experiencia_tiempo">Tiempo</string>
    <!--Strings de detalle_experiencia -->

    <!--Strings de dato_estudio -->
    <string name="dato_estudio">Datos de estudio</string>
    <string name="nivel_estudio">Nivel de estudio</string>
    <string name="institucionId">ID de la institución</string>
    <string name="candidato_id">Identificador del candidato</string>
    <!--Strings de dato_estudio -->

    <!--Strings de contacto_aspirante -->
    <string name="dato_contactos">Contactos</string>
    <string name="contacto_id">Identificador del contacto</string>
    <string name="telefono1">Teléfono 1</string>
    <string name="telefono2">Teléfono 2</string>
    <string name="correo">Correo electrónico</string>
    <!--Strings de contacto_aspirante -->

    <!--Strings de detalle_aplicacion -->
    <string name="detalle_aplicacion">Aplicaciones</string>
    <string name="id_aplicacion">Identificador detalle aplicación</string>
    <!-- <string name="candidato_id">Identificador del candidato</string> -->
    <string name="estadoaplicacion">Estado de la aplicación</string>
    <!--Strings de detalle_aplicacion -->

    <string name="opciones">Opciones</string>
    <string name="insertar">Insertar</string>
    <string name="limpiar">Limpiar campos</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="perfil_usuario">Informacion de perfil del aplicante</string>
    <!--Strings de Adeministrador-->
    <string name="Departamento">Departamento</string>
    <string name="Area_Trabajo">Area Trabajo</string>
    <string name="Candidatos">Candidato</string>
    <string name="Empresas">Empresas</string>
    <string name="Ofertas">Ofertas</string>
    <string name="Administrador">Pantalla Administrador</string>
    <string name="Administradores">Administradores</string>
    <string name="Opciones_de_Edicion">Opciones de Edicion</string>
    <!--Strings de Departamento-->
    <string name="Id_departamento">ID Departamento:</string>
    <string name="Nombre_departamento">Nombre Departamento:</string>
    <!--Strings de Municipio-->
    <string name="municipio">Municipio</string>
    <string name="ID_municipo">ID Municipio:</string>
    <string name="Nombre_municipio">Nombre Municipio:</string>


    <!--Strings de Institucion-->
    <string name="Institucion">Institucion Educativa</string>
    <string name="ID_Institucion">ID Institucion:</string>
    <string name="Nombre_Institucion">Nombre Institucion:</string>

    <!--Strings de Area Trabajo-->
    <string name="Id_AreaTrabajo">ID Area Trabajo:</string>
    <string name="Nombre_AreaTrabajo">Nombre Area Trabajo:</string>
    <!--Strings de Empresa-->
    <string name="Id_Empresa">Id Empresa:</string>
    <string name="Razon_Social_Empresa">Razon Social:</string>
    <string name="Nombre_Empresa">Nombre Empresa:</string>
    <string name="Direccion_Empresa">Direccion Empresa:</string>

    <!--Strings de puesto-empresa -->
    <string name="idPuesto">Id Puesto</string>
    <string name="nombrePuesto">Nombre Puesto</string>
    <string name="numPuesto">Numeros de Puesto</string>
    <string name="idArea">Id Area</string>

    <!--Strings de evaluacion-empresa -->
    <string name="idEva">Id Evaluacion</string>
    <string name="idApp">Id Aplicacion</string>
    <string name="tipo">Tipo de Evaluacion</string>
    <string name="fecha">Fecha de Evaluacion</string>
    <string name="estadoEva">Estado de Evaluacion</string>

    <string name="reco">Recomendacion</string>


</resources>
