<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="30dip"
    android:stretchColumns="1">
    <TableRow>
        <TextView android:text="@string/idPuesto"/>
        <EditText
            android:id="@+id/editIdPuesto"
            android:inputType="text"
            android:maxLength="4" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idOferta"/>
        <EditText
            android:id="@+id/editIdOfertaP"
            android:inputType="text"
            android:maxLength="32" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idArea"/>
        <EditText
            android:id="@+id/editIdAreaP"
            android:inputType="text"
            android:maxLength="32" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombrePuesto"/>
        <EditText
            android:id="@+id/editNombrePuesto"
            android:inputType="text"
            android:maxLength="32" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/numPuesto" />
        <EditText
            android:id="@+id/editVacPuesto"
            android:inputType="text"
            android:maxLength="4" />
    </TableRow>
    <TableRow>
        <TextView/>
    </TableRow>
    <TableRow>
        <TextView/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarPuesto"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>