<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idOferta" />
        <EditText
            android:id="@+id/editIdOferta"
            android:inputType="text"
            android:maxLength="4" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/inicioOferta" />
        <EditText
            android:id="@+id/editInicioOferta"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/finOferta" />
        <EditText
            android:id="@+id/editFinOferta"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombreOferta" />
        <EditText
            android:id="@+id/editNombreOferta"
            android:inputType="text"
            android:maxLength="256" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarOferta"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>
