<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idDetalleOferta" />
        <EditText
            android:id="@+id/editIdDetalleOferta"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/perfil" />
        <EditText
            android:id="@+id/editPerfil"
            android:inputType="text"
            android:maxLength="250" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/salario" />
        <EditText
            android:id="@+id/editSalario"
            android:inputType="text"
            android:maxLength="4" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="actualizarDetalle"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>