<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="17dp"
    android:paddingRight="17dp"
    android:background="@color/caja"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="29dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:text="@string/idEva"
        android:textColor="#455A64" />

    <EditText
        android:id="@+id/editIdEvaluacion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="4"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="29dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:text="@string/idApp"
        android:textColor="#455A64" />
    <EditText
        android:id="@+id/editIdApp"
        android:inputType="text"
        android:maxLength="4"
        android:minHeight="48dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="29dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:text="@string/tipo"
        android:textColor="#455A64" />
    <EditText
        android:id="@+id/editTipoEva"
        android:inputType="text"
        android:maxLength="32"
        android:minHeight="48dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="29dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:text="@string/fecha"
        android:textColor="#455A64" />
    <EditText
        android:id="@+id/editFechaEva"
        android:inputType="text"
        android:maxLength="32"
        android:minHeight="48dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="29dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:text="@string/estadoEva"
        android:textColor="#455A64" />
    <EditText
        android:id="@+id/editEstadoEva"
        android:inputType="text"
        android:maxLength="32"
        android:minHeight="48dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="29dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/opciones"
        android:textColor="#455A64" />

    <Button
        android:onClick="actualizarEvaluacion"
        android:text="@string/actualizar"
        android:minHeight="48dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="limpiarTexto"
        android:text="@string/limpiar"
        android:minHeight="48dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>