<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="10dip"
    android:stretchColumns="1">
    <TableRow>
        <TextView android:text="@string/idAspirante" />
        <EditText
            android:id="@+id/editIdAspirante"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/estado" />
        <Spinner
            android:id="@+id/spinner_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="338dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarAspirante"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>